--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
-        password: ${{ secrets.PAT }}
+        password: ${{ secrets.deploykey }}
 
     - name: set up qemu
       uses: docker/setup-qemu-action@v3
