--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -21,6 +21,12 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: set up qemu
       uses: docker/setup-qemu-action@v3
       with:
@@ -43,3 +49,5 @@ jobs:
         tags: |
           ghcr.io/noipcom/noip-duc:latest
           ghcr.io/noipcom/noip-duc:${{ env.VERSION }}
+          noipcom/noip-duc:latest
+          noipcom/noip-duc:${{ env.VERSION }}
