Update to version 3.3.0, improvements to readme

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -1,11 +1,11 @@
-name: Build and Push Docker Image for ARM, AMD64 and ARM64 
+name: Build and Push Docker Image for AMD64, ARM64 & ARMv7
 on:
   push:
     branches:
       - main
 
 env: 
-  VERSION: '3.2.0'
+  VERSION: '3.3.0'
 
 jobs:
   build-and-push:
