--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image for AMD64, ARM64 & ARMv7
+name: Build and Push Docker Image for AMD64, ARM64 & ARMv7 to GHCR & Dockerhub
 on:
   push:
     branches:
