Update compose.yaml to support IPv6
Co-authored-by: Jannik Raskob <71491044+jrasko@users.noreply.github.com>

--- a/compose.yaml
+++ b/compose.yaml
@@ -6,3 +6,8 @@ services:
     image: ghcr.io/noipcom/noip-duc:latest
     env_file: noip-duc.env  # for additional env variables
     restart: always         # will restart after server reset
+    networks:
+      - noip_duc
+networks:
+  noip_duc:
+    enable_ipv6: true
